--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "firebase": "^4.12.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-redux-firebase": "^2.0.6",
