--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "firebase-mock": "^2.2.2"
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest-enzyme": "^6.0.0",
+    "react-test-renderer": "^16.3.1"
   }
 }
