--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,4 +9,7 @@ jobs:
     steps:
       - checkout
       - run: npm install
-      - run: npm test
+      - run: ./node_modules/.bin/eslint src/
+      - run: npm test -- --coverage
+      - run: npm run lint
+
