--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "ajv-keywords": "^3.1.0",
+    "bootstrap": "^4.1.0",
     "firebase": "^4.12.1",
     "moment": "^2.22.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
-    "react-bootstrap": "^0.32.1",
     "react-dates": "^16.5.0",
     "react-dom": "^16.3.1",
+    "react-icons": "^2.2.7",
     "react-redux": "^5.0.7",
     "react-redux-firebase": "^2.0.6",
     "react-scripts": "1.1.4",
