--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     },
     "rules": {
         "semi": ["error", "never"],
-        "comma-dangle": ["error", "never"]
+        "comma-dangle": ["error", "never"],
+        "max-len": ["error", { "code": 140 }]
     }
 }
