--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^5.0.7",
     "react-redux-firebase": "^2.0.6",
     "react-scripts": "1.1.4",
+    "react-textarea-autosize": "^6.1.0",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-firestore": "^0.3.2"
